# indexer

./: .gitignore  README.md  benchmark.py  pyproject.toml
context_db/: __init__.py  cli.py  models.py
context_db/embeddings/: __init__.py  embedder.py
context_db/embeddings/providers/: __init__.py  local.py
context_db/indexer/: __init__.py  chunker.py  extractor.py  fingerprint.py  pipeline.py  scanner.py
context_db/retrieval/: __init__.py  hybrid.py  search.py  semantic.py
context_db/storage/: __init__.py  db.py  repository.py
tests/: conftest.py  helpers.py  test_chunker.py  test_cli.py  test_cli_embeddings.py  test_edge_cases.py  test_embedder.py  test_embedding_pipeline.py  test_embedding_storage.py  test_extractor.py  test_fingerprint.py  test_hybrid.py  test_pipeline.py  test_scanner.py  test_search.py  test_semantic.py  test_storage.py
