[project]
name = "context-db"
version = "0.1.0"
description = "Filesystem indexing engine for AI agents — SQLite-backed, FTS5-powered, embedding-free."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15.0",
    "pydantic>=2.10.0",
    "structlog>=25.0.0",
    "rich>=13.9.0",
    "markitdown[docx,pdf,pptx,xlsx]>=0.1.6",
]

[project.scripts]
ctx = "context_db.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["context_db"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-timeout>=2.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["context_db"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 90
